--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     },
     "OWNER": {
       "description": "Isi dengan username kalian tanpa tanda @",
-      "value": ""
+      "value": "kenkanasw"
     },
     "GROUP": {
       "description": "Isi dengan username group kalian tanpa tanda @ kalau gak punya gak usah isi",
